--- a/lesson.html
+++ b/lesson.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="lesson.js" />
+    <link rel="stylesheet" href="" />
     <title>lesson</title>
+    <script src="lesson.js"></script>
 </head>
 <body>
-<p id="text1" >Text 1</p>
-<p id="text2">Text 2</p>
-<p id="text3">Text 3</p>
+
+<p id="text1" onclick="change1()">Text 1 TEXT</p>
+<p id="text2" onclick="change2()">Text 2 TEXT</p>
+<p id="text3" onclick="change3()">Text 3 TEXT</p>
 
 
 </body>
